Should definitely close #1443.
Replaces the legacy Java2D display by a much faster one, which should
eliminate the need for programmatically resizing the display views.

Please test in various environments...